macros/tests/trybuild/fn.stderr
error: cannot use `serde_args::help` macro on function
 --> tests/trybuild/fn.rs:4:1
  |
4 | fn foo() {}
  | ^^^^^^^^^^^
