macros/tests/trybuild/fn.rs
use serde_args_macros::help;

#[help]
fn foo() {}

fn main() {}
